@@ -1,11 +1,0 @@
-<html>
-<body>
-<p>
-This document is the API specification for the Jasypt 
-Java Simplified Encryption library integration package for Spring Security
-(ACEGI Security), version 1.1.
-</p>
-<br/>
-
-</body>
-</html>
